--- a/index.html
+++ b/index.html
@@ -63,27 +63,26 @@
                 <a href="https://scholar.google.com/citations?user=zKh-MAEAAAAJ&hl=en&oi=ao" target="_blank">Zhenchen Wan</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?hl=en&user=NOEyacoAAAAJ" target="_blank">Yanwu Xu</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?hl=en&user=NOEyacoAAAAJ" target="_blank">Yanwu Xu</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=ZqOjPKQAAAAJ&hl=en&oi=ao" target="_blank">Zhaoqing Wang</a><sup>3</sup>
+                <a href="https://scholar.google.com/citations?user=ZqOjPKQAAAAJ&hl=en&oi=ao" target="_blank">Zhaoqing Wang</a><sup>2</sup>
               </span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?hl=en&user=eqe3JS8AAAAJ" target="_blank">Feng Liu</a><sup>1</sup>
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?hl=en&user=EiLdZ_YAAAAJ" target="_blank">Tongliang Liu</a><sup>3</sup>
+                <a href="https://scholar.google.com/citations?hl=en&user=EiLdZ_YAAAAJ" target="_blank">Tongliang Liu</a><sup>2</sup>
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?hl=en&user=6BmiCJIAAAAJ" target="_blank">Mingming Gong</a><sup>1,4</sup>
+                <a href="https://scholar.google.com/citations?hl=en&user=6BmiCJIAAAAJ" target="_blank">Mingming Gong</a><sup>1,3</sup>
               </span>
 
               </div>
               <div class="is-size-5 publication-authors">
                 <span class="author-block"><sup>1</sup>University of Melbourne, Australia</span><br>
-                <span class="author-block"><sup>2</sup>Snapchat, Los Angeles, USA</span><br>
-                <span class="author-block"><sup>3</sup>University of Sydney, Australia</span><br>
-                <span class="author-block"><sup>4</sup>Mohamed bin Zayed University of Artificial Intelligence, UAE</span>
+                <span class="author-block"><sup>2</sup>University of Sydney, Australia</span><br>
+                <span class="author-block"><sup>3</sup>Mohamed bin Zayed University of Artificial Intelligence, UAE</span>
               </div>
 
                   <div class="column has-text-centered">
